# dalbit

./: .gitmodules  Cargo.toml  README.md  init.luau
.github/workflows/: release.yml
cli/: config.luau  getStdout.luau  init.luau  inject.luau  libs.luau  localizer.luau
src/: main.rs
src/cli/: clean.rs  fetch.rs  init.rs  mod.rs  transpile.rs
src/lib/: injector.rs  manifest.rs  mod.rs  modifier.rs  polyfill.rs  transpile.rs  transpiler.rs  utils.rs
src/lib/modifiers/: ast_util.rs  convert_bit32.rs  mod.rs  optimize_table_initializers.rs  relative_path.rs  remove_empty_do.rs  remove_generalized_iteration.rs
