[package]
name = "dalbit"
version = "0.1.0"
authors = ["jeparlefrancais <jeparlefrancais21@gmail.com>", "jiwonz"]
edition = "2021"
description = "A Luau-to-Lua transpiler based on darklua"
repository = "https://github.com/CavefulGames/dal"
keywords = ["luau", "lua", "transpiler"]
license = "MIT"
readme = "README.md"

[badges]
github = { repository = "CavefulGames/dal" }

[lib]
name = "dalbit_core"
path = "src/lib/mod.rs"

[[bin]]
name = "dalbit"
path = "src/main.rs"

[profile.dev.package.full_moon]
opt-level = 3

[dependencies]
anyhow = "1.0.89"
auth-git2 = "0.5.5"
blake3 = "1.5.4"
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
git2 = "0.19.0"
hex = "0.4.3"
serde = { version = "1.0.214", features = ["derive"] }
strfmt = "0.2.4"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
log = "0.4.21"
pathdiff = "0.2.2"
path-slash = "0.2.1"
durationfmt = "0.1.1"
async-trait = "0.1.83"
full_moon = { version = "1.1.2", features = ["luau", "lua53"] }
darklua-demo = "3.2.1"
env_logger = "0.11.5"
anstyle = "1.0.10"
indexmap = { version = "2.7.0", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }
fs-err = "3.0.0"
